--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-chat-engine": "^1.11.21",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "stream-chat": "^3.13.1",
+    "stream-chat-react": "^6.11.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
